# tunnelbana

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.github/workflows/: ci.yml  mdbook.yml
config/: attributes.toml  proxy.toml
crates/tunnelbana/: Cargo.toml
crates/tunnelbana-core/: Cargo.toml
crates/tunnelbana-core/src/: attributes.rs  cache.rs  config.rs  context.rs  error.rs  http.rs  internal.rs  keys.rs  lib.rs  mac.rs  plugin.rs  proxy.rs  router.rs  state.rs  util.rs
crates/tunnelbana-oidc/: Cargo.toml
crates/tunnelbana-oidc/src/: client.rs  dpop.rs  federation.rs  jwt.rs  lib.rs  metadata.rs  oauth_error.rs  pkce.rs  provider.rs  request.rs  rp.rs  tokens.rs
crates/tunnelbana-oidc/tests/: op_flow.rs
crates/tunnelbana-plugins/: Cargo.toml
crates/tunnelbana-plugins/src/: client_loader.rs  dpop.rs  federation_backend.rs  federation_frontend.rs  keyload.rs  lib.rs  microservices.rs  oidc_backend.rs  oidc_frontend.rs  saml2_backend.rs  saml2_frontend.rs  saml_common.rs  saml_metadata.rs
crates/tunnelbana-plugins/src/microservices/: accr.rs  authorization.rs  generation.rs  hasher.rs  logging.rs  mod.rs  nameid.rs  pairwiseid.rs  policy.rs  primary_identifier.rs  processor.rs  routing.rs  static_virtual_idp.rs  values.rs
crates/tunnelbana-plugins/testdata/: sp-cert.pem  sp-key.pem  sp-metadata.xml
crates/tunnelbana-plugins/tests/: accr_flow.rs  federation_flow.rs  federation_rp.rs  proxy_oidc_dpop.rs  proxy_oidc_op.rs  saml_disco.rs  saml_encrypted.rs  saml_roundtrip.rs
crates/tunnelbana/src/: main.rs  reqwest_client.rs
deploy/satosa-idp/: .env.example  Caddyfile  Dockerfile  README.md  build.sh  docker-compose.yml  proxy.toml
docs/: book.toml  custom.css
docs/adr/: 0001-state-cookie-encryption.md  0002-oidc-token-codec.md  0003-dpop-sender-constrained-tokens.md  0004-client-credentials-grant.md  0005-saml-mdq-dynamic-idp.md  0006-saml-frontend-sp-metadata-store.md  0007-saml-discovery-service.md  0008-attribute-map-oids-and-passthrough.md  0009-saml-encrypted-assertions.md  0010-saml-unsolicited-fail-closed.md  0011-attribute-processor-microservice.md  0012-attribute-authorization-microservice.md  0013-microservice-framework-decorations.md  0014-filter-attributes-policy.md  0015-custom-routing-target-issuer.md  0016-idp-hinting-microservice.md  0017-filter-attribute-values-microservice.md  0018-rename-attributes-microservice.md  0019-attribute-generation-microservice.md  0020-attribute-processor-pack.md  0021-hasher-microservice.md  0022-primary-identifier-microservice.md  0023-custom-logging-microservice.md  0024-openid-federation-backend.md  0025-external-federation-discovery-service.md  0026-oidc-refresh-token-grant.md  0027-frontend-backend-pin.md  0028-clients-file.md  0029-router-exact-match-dispatch.md  0030-eduid-scimapi-microservices.md  0031-custom-index-page.md  README.md
docs/src/: SUMMARY.md  architecture.md  attributes.md  built-in-plugins.md  configuration.md  introduction.md  micro-services.md  security-state-cookie.md  tutorial-oidc-federation.md  tutorial-saml-mdq.md  writing-a-plugin.md
