[package]
name = "tunnelbana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core framework for the tunnelbana identity proxy (Context, InternalData, state cookie, routing, config, attribute mapping)."

[dependencies]
# Generic primitives (error, http, keys, mac, util) and the OAuth2/OIDC
# protocol layer now live in grindvakt; this crate re-exports the primitives.
grindvakt.workspace = true
jose-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
hkdf.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
