[package]
name = "tunnelbana-oidc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Compatibility shim re-exporting the grindvakt OAuth2/OIDC/Federation library for the tunnelbana proxy."

[dependencies]
# The protocol library now lives in grindvakt; this crate just re-exports it.
grindvakt.workspace = true
