[package]
name = "tunnelbana-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Concrete frontends, backends and micro-services for the tunnelbana proxy."

[dependencies]
tunnelbana-core = { path = "../tunnelbana-core" }
tunnelbana-oidc = { path = "../tunnelbana-oidc" }
gamlastan.workspace = true
gamlastan-mdq.workspace = true
jose-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tera.workspace = true
url.workspace = true
base64.workspace = true
regex.workspace = true
sha2.workspace = true
chrono = "0.4"
flate2 = "1"
serde_ignored = "0.1.14"

[dev-dependencies]
tokio.workspace = true
form_urlencoded.workspace = true
