[package]
name = "tunnelbana"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "The tunnelbana identity proxy server (actix-web)."

[[bin]]
name = "tunnelbana"
path = "src/main.rs"

[dependencies]
tunnelbana-core = { path = "../tunnelbana-core" }
tunnelbana-oidc = { path = "../tunnelbana-oidc" }
tunnelbana-plugins = { path = "../tunnelbana-plugins" }
actix-web.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
form_urlencoded.workspace = true
